--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "hello_near"
+name = "patient-data"
 version = "1.0.0"
-authors = ["Near Inc <hello@near.org>"]
+authors = ["Alinafe Kaliwo"]
 edition = "2021"
 
 [lib]
